--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script src="partial/home/home.js"></script>
   <script src="partial/seatSelection/seatSelection.js"></script>
   <script src="service/booking.js"></script>
+  <script src="directive/seat-matrix/seat-matrix.js"></script>
   <!-- Add New Component JS Above -->
 
   <div>
