Adding modal window to show the message

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src="partial/seatSelection/seatSelection.js"></script>
   <script src="service/booking.js"></script>
   <script src="directive/seat-matrix/seat-matrix.js"></script>
+  <script src="partial/checkout-modal/checkout-modal.js"></script>
   <!-- Add New Component JS Above -->
 
   <div>
